--- a/layout/app/scss/main.scss
+++ b/layout/app/scss/main.scss
@@ -3057,8 +3057,7 @@ label.password {
   // Hide address fields not needed in UI (kept in DOM for CDEK shipping calculation)
   #billing_country_field,
   #billing_state_field,
-  #billing_postcode_field,
-  #billing_address_1_field {
+  #billing_postcode_field {
     position: absolute;
     width: 1px;
     height: 1px;
