--- a/layout/app/scss/main.scss
+++ b/layout/app/scss/main.scss
@@ -2821,6 +2821,7 @@ label.password {
     }
     .checkout-table__cell {
       background-color: var(--black);
+      white-space: nowrap;
       font-size: 10px;
       line-height: 150%;
       color: #ffffff;
