--- a/layout/app/scss/main.scss
+++ b/layout/app/scss/main.scss
@@ -2868,7 +2868,7 @@ label.password {
           }
         }
         &.price {
-          font-weight: 600;
+          font-weight: 600 !important;
           justify-content: flex-end;
           @media only screen and (max-width: 767px) {
             border-left: 1px solid var(--black);
@@ -2908,7 +2908,7 @@ label.password {
           }
         }
         &.total {
-          font-weight: 600;
+          font-weight: 600 !important;
           justify-content: flex-end;
         }
         @media only screen and (max-width: 767px) {
